# Generative-UI

./: README.md  README.zhCN.md  langgraph.json  package.json  pyproject.toml  template.yml
.aws/: example.toml  generative-ui-ap-southeast.toml
.aws-sam/: build.toml
.cursor/rules/: generative-ui.mdc
.github/workflows/: aws-preview.yml  aws.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agents/raw-web/: agent.py
demos/: package-lock.json
demos/.next/: trace
demos/.next/cache/: .rscinfo
demos/.next/server/: server-reference-manifest.json  webpack-runtime.js
demos/.next/server/app/: page.js  page_client-reference-manifest.js
demos/.next/server/vendor-chunks/: @swc.js
demos/.next/static/chunks/: app-pages-internals.js  webpack.js
docker/: Dockerfile.aws.lambda
docs/: aws.md  self_hosted.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Button.tsx  StreamingChat.tsx
server/: langgraph.json  main.py  requirements.txt
server/agents/: langgraph_handler.py  models.py  router.py  state.py
server/agents/enhanced_markdown/: agent.py
server/agents/raw_web/: agent.py
server/agents/tools/: stock.py
server/core/types/: models.py
server/llm/: __init__.py  base.py
server/llm/providers/: gemini.py  openai.py
server/utils/: env.py
test/fixtures/: Generative-UI-API.postman_collection.json  example.html
(+8 files in other folders)
