[tool.poetry]
name = "langgraph_genui_demo"
version = "0.1.0"
description = "基于 LangGraph 的生成式 UI 演示项目"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "agents" }]

[project]
name = "agents"
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvicorn = "^0.34.0"
dotenv = "^0.9.9"
langchain = ">=0.1.0"
langchain-core = ">=0.1.5"
langchain-community = ">=0.0.1"
langchain-experimental = ">=0.0.11"
langchain-openai = ">=0.0.1"
langgraph = "^0.6.1"
ag-ui-langgraph = { version = "0.0.5a0", extras = ["fastapi"] }
python-dotenv = "^1.0.0"
fastapi = "^0.115.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "agents.raw-web:main"